# invert_map

./: .gitignore  README.md  pyproject.toml  requirements.txt
invert_map/: barycentric.py  barycentric2.py  bilinear.py  iterative.py  main_benchmark.py  main_demo.py  map_generator.py
src/: bilinear.py
