[project]
name = "invert_map"
version = "0.1.0"
description = "Benchmarking algorithms to invert maps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "numba>=0.60.0",
    "numpy<2",
    "opencv-python>=4.10.0.84",
    "pytest>=8.3.3",
    "scipy>=1.14.1",
]
